deployments/stirling/stirling-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stirling-ingress
  namespace: stirling
spec:
  ingressClassName: traefik
  rules:
  - host: stirling.maseko-lab.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stirling
            port:
              number: 80
